cabal-version:      2.2
Category:           Biology
build-type:         Simple
name:               graph
version:            0.2.0

author:             Ward Wheeler
maintainer:         wheeler@amnh.org
license:            BSD-3-Clause
license-file:       LICENSE

synopsis:           Library for phylogenetic graphs

description:        Defines data type for phylogenetic graphs and various
                    helper functions.



-- A litany of GHC warnings designed to alert us during the build of any common
-- pitfalls, future compatibility issues, or coding conventions.
common ghc-flags

  ghc-options:
    -- Optimization flags
    -O2
    -fexcess-precision
    -fexpose-all-unfoldings
    -flate-specialise
    -foptimal-applicative-do
    -fspecialize-aggressively
    -fstatic-argument-transformation
    -- Usability flags
    -fdiagnostics-color=always
    -fhide-source-paths
    -j
    -- Sanity check warnings
    -Wall
    -Wcompat
    -Wdodgy-foreign-imports
    -Wduplicate-exports
    -Wempty-enumerations
    -Widentities
    -Wincomplete-patterns
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-fields
    -Wmissing-home-modules
    -Wmissing-monadfail-instances
    -Wmissing-signatures
    -Wnoncanonical-monadfail-instances
    -Wnoncanonical-monad-instances
    -Wnoncanonical-monoid-instances
    -Woverflowed-literals
    -Woverlapping-patterns
    -Wredundant-constraints
    -Wsemigroup
    -Wtabs
    -Wunrecognised-warning-flags
    -Wunused-binds
    -Wunused-do-bind
    -Wunused-foralls
    -Wunused-imports
    -Wunused-matches
    -Wwrong-do-bind

common language-spec

  default-language: Haskell2010

  -- Always use MonadFail(fail), not Monad(fail)
  other-extensions: MonadFailDesugaring


library pcg-graph

  import:
    ghc-flags,
    language-spec

  hs-source-dirs:
    src

  build-depends:
    pcg-utility,
    base                     >= 4.11      && < 5.0,
    bifunctors               ^>= 5.5.4            ,
    -- >=0.5.8 Required for Data.Map.restrictKeys
    containers               >= 0.5.8     && < 0.7,
    deepseq                  >= 1.4       && < 2.0,
    foldl                    >= 1.3.2     && < 2.0,
    keys                     >= 3.0       && < 4.0,
    lens                     >= 4.17      && < 5.0,
    QuickCheck               >= 2.12      && < 3.0,
    text                     >= 1.2       && < 2.0,
    text-show                >= 3.0       && < 4.0,
    text-show-instances      >= 3.0       && < 4.0,
    -- >=0.12.0.2 required for compatability with "compact regions"
    vector                   >= 0.12.0.2  && < 0.13,
    -- >=3.4 required for corrected definition of (!) & index
    vector-instances         >= 3.4       && < 3.5,


  exposed-modules:
    Data.Graph
    Data.Graph.Type
    Data.Graph.Memo
    Data.Graph.Internal
    Data.Graph.Indices
    Data.Graph.NodeContext
    Data.Graph.Moves
    Data.Graph.Hash

  other-modules:


test-suite pcg-graph-test

  import:
    ghc-flags,
    language-spec

  main-is:
    TestSuite.hs

  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    test

  build-depends:
    pcg-graph,
    base                     >= 4.11      && < 5.0,
    QuickCheck               >= 2.12      && < 3.0,
    tasty                    >= 1.2       && < 2.0,
    tasty-hunit              >= 0.10      && < 1.0,
    tasty-quickcheck         >= 0.9       && < 1.0,
    tasty-rerun              >= 1.1.14    && < 2.0,
                    
  other-modules:
    Data.Graph.Test


benchmark benchmark-suite

  import:
    ghc-flags,
    language-spec     

  main-is:          
    Benchmarks.hs

  type:             
    exitcode-stdio-1.0

  hs-source-dirs: 
    bench

  build-depends:
    pcg-utility,
    base                     >= 4.11      && < 5.0,
    criterion                >= 1.5       && < 2.0,

  ghc-options:
    -fdicts-cheap
    -fmax-simplifier-iterations=10
    -fspec-constr-count=6
    -threaded
                    
  other-modules:
    Data.Graph.Bench

