name:                pcg-language

version:             0.0.1.1

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:
--license:             BSD3
--license-file:        LICENSE
author:              Ward Wheeler
maintainer:          wheeler@amnh.org

-- A copyright notice.
-- copyright:

category:            Biology
build-type:          Simple
--extra-source-files:  README.md

cabal-version:       >= 1.22

library

  build-depends:       base               >=4.8
                     , case-insensitive
                       -- >=0.5.8 Required for Data.Map.restrictKeys
                     , containers         >=0.5.8
                     , free
                     , keys
                     , megaparsec         >=7.0.0
                     , parser-combinators >=0.2.0
                     , scientific
                     , text
                     , time

  default-language:    Haskell2010

  ghc-options:         -O2

                    -- Sanity check warnings
                       -Wall
                       -Wcompat
                       -Wdodgy-foreign-imports
                       -Wduplicate-exports
                       -Wempty-enumerations
                       -Widentities
                       -Wincomplete-patterns
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-fields
                       -Wmissing-home-modules
                       -Wmissing-local-signatures
                       -Wmissing-monadfail-instances
                       -Wmissing-monadfail-instances
                       -Wmissing-signatures
                       -Wnoncanonical-monadfail-instances
                       -Wnoncanonical-monad-instances
                       -Wnoncanonical-monoid-instances
                       -Woverflowed-literals
                       -Woverlapping-patterns
                       -Wredundant-constraints
                       -Wsemigroup
                       -Wtabs
                       -Wunrecognised-warning-flags
                       -Wunrecognised-warning-flags
                       -Wunused-binds
                       -Wunused-do-bind
                       -Wunused-foralls
                       -Wunused-imports
                       -Wunused-matches
                       -Wwrong-do-bind

  exposed-modules:     PCG.Syntax
                       PCG.Command.Build
                       PCG.Command.Echo
                       PCG.Command.Read
                       PCG.Command.Report
                       PCG.Command.Save
                       PCG.Command.Load
                       PCG.Syntax.Combinators

  other-modules:       PCG.Syntax.Parser
                       PCG.Syntax.Primitive

  other-extensions:    MonadFailDesugaring
