cabal-version:      2.2
Category:           Biology
build-type:         Simple
name:               pcg-language
version:            0.2.0

author:             Ward Wheeler
maintainer:         wheeler@amnh.org
license:            BSD-3-Clause
license-file:       LICENSE

synopsis:           Defines the grammar & specific commands of the PCG langauge

description:        In addition to the grammar definition, this library exports a parser for the
                    grammar. Each command available in PCG is defined here and a script parser is
                    exported to parse a sequence of commands which represents the computation to
                    be performed by PCG.


-- A litany of GHC warnings designed to alert us during the build of any common
-- pitfalls, future compatibility issues, or coding conventions.
common ghc-flags

  ghc-options:
    -- Optimization flags
    -O2
    -fexcess-precision
    -fexpose-all-unfoldings
    -flate-specialise
    -foptimal-applicative-do
    -fspecialize-aggressively
    -fstatic-argument-transformation
    -- Usability flags
    -fdiagnostics-color=always
    -fhide-source-paths
    -j
    -- Sanity check warnings
    -Wall
    -Wcompat
    -Wdodgy-foreign-imports
    -Wduplicate-exports
    -Wempty-enumerations
    -Widentities
    -Wincomplete-patterns
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-fields
    -Wmissing-home-modules
    -Wmissing-monadfail-instances
    -Wmissing-signatures
    -Wnoncanonical-monadfail-instances
    -Wnoncanonical-monad-instances
    -Wnoncanonical-monoid-instances
    -Woverflowed-literals
    -Woverlapping-patterns
    -Wredundant-constraints
    -Wsemigroup
    -Wtabs
    -Wunrecognised-warning-flags
    -Wunused-binds
    -Wunused-do-bind
    -Wunused-foralls
    -Wunused-imports
    -Wunused-matches
    -Wwrong-do-bind


-- Global deviations from Haskell98
common language-specs

  default-language: Haskell2010

  -- Always use MonadFail(fail), not Monad(fail)
  other-extensions: MonadFailDesugaring


library

  import:
--    dependencies,
    ghc-flags,
    language-specs

  hs-source-dirs:
    src

  build-depends:
    pcg-file-source,
    base                     >= 4.11      && < 5.0,
    case-insensitive         >= 1.2.0     && < 1.3,
    -- >=0.5.8 Required for Data.Map.restrictKeys
    containers               >= 0.5.8     && < 1.0,
    free                     >= 5.0       && < 6.0,
    keys                     >= 3.0       && < 4.0,
    megaparsec               >= 7.0       && < 7.1,
    parser-combinators       >= 1.0       && < 2.0,
    scientific               >= 0.3.6     && < 0.4,
    semigroups               >= 0.18      && < 1.0,
    text-short               >= 0.1.3     && < 1.0,
    time                     >= 1.8.0     && < 2.0,

  exposed-modules:
    PCG.Syntax
    PCG.Command.Build
    PCG.Command.Echo
    PCG.Command.Read
    PCG.Command.Report
    PCG.Command.Save
    PCG.Command.Load
    PCG.Syntax.Combinators

  other-modules:
    PCG.Syntax.Parser
    PCG.Syntax.Primitive
