cabal-version:      2.2
Category:           Biology
build-type:         Simple
name:               pcg-serialize
version:            0.2.0

author:             Ward Wheeler
maintainer:         wheeler@amnh.org
license:            BSD-3-Clause
license-file:       LICENSE

synopsis:           A library for defining custom serialisation and rendering functionality.

description:        Defines custom helper functions for serializing to data formats and related
                    to text representations.


-- A litany of GHC warnings designed to alert us during the build of any common
-- pitfalls, future compatibility issues, or coding conventions.
common ghc-flags

  ghc-options:
    -- Optimization flags
    -O2
    -fexcess-precision
    -fexpose-all-unfoldings
    -flate-specialise
    -foptimal-applicative-do
    -fspecialize-aggressively
    -fstatic-argument-transformation
    -- Usability flags
    -fdiagnostics-color=always
    -fhide-source-paths
    -j
    -- Sanity check warnings
    -Wall
    -Wcompat
    -Wdodgy-foreign-imports
    -Wduplicate-exports
    -Wempty-enumerations
    -Widentities
    -Wincomplete-patterns
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies          
    -Wmissing-fields
    -Wmissing-home-modules
    -Wmissing-monadfail-instances
    -Wmissing-signatures
    -Wnoncanonical-monad-instances
    -Wnoncanonical-monoid-instances
    -Woverflowed-literals
    -Woverlapping-patterns
    -Wredundant-constraints
    -Wsemigroup
    -Wtabs
    -Wunrecognised-warning-flags
    -Wunused-binds
    -Wunused-do-bind
    -Wunused-foralls
    -Wunused-imports
    -Wunused-matches
    -Wwrong-do-bind


library

  import:
    ghc-flags

  hs-source-dirs:
    src

  build-depends:
    base                     >= 4.11      && < 5.0,
    keys                     >= 3.0       && < 4.0,
    semigroups               >= 0.18      && < 1.0,
    text                     >= 1.2       && < 2.0,
    text-short               >= 0.1.3     && < 1.0,
    text-show                >= 3.8.3     && < 4.0,
    xml                      >= 1.3.14    && < 1.4,

  exposed-modules:
    Data.Text.Short.Custom
    TextShow.Custom
    Text.Newick.Class
    Text.XML
    Text.XML.Class
    Text.XML.Custom
 
  default-language: Haskell2010

  other-extensions: MonadFailDesugaring
