name:                pcg-utility

version:             0.0.1.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:
--license:             BSD3
--license-file:        LICENSE
author:              Ward Wheeler
maintainer:          wheeler@amnh.org

-- A copyright notice.
-- copyright:

category:            Biology
build-type:          Simple
--extra-source-files:  README.md

cabal-version:      >= 1.22

library

  build-depends:      base             >=4.8
                    , bv-little
                    , containers       >=0.5.8
                    , deepseq
--                    , either
                    , hashable
                    , integer-gmp
                    , keys
                    , matrix
                    , mono-traversable >=1.0
--                    , primitive
                    , QuickCheck
--                    , tasty
--                    , tasty-hunit
--                    , tasty-quickcheck
                    , transformers
                    , vector

  default-language: Haskell2010
  
  ghc-options:      -O2

                    -- Sanity check warnings
                    -Wall
                    -Wcompat
                    -Wdodgy-foreign-imports
                    -Wduplicate-exports

                    -Wempty-enumerations
                    -Widentities
                    -Wincomplete-patterns
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wmissing-fields
                    -Wmissing-home-modules
                    -Wmissing-monadfail-instances
                    -Wmissing-monadfail-instances
                    -Wmissing-signatures
                    -Wnoncanonical-monadfail-instances
                    -Wnoncanonical-monad-instances
                    -Wnoncanonical-monoid-instances
                    -Woverflowed-literals
                    -Woverlapping-patterns
                    -Wredundant-constraints
                    -Wsemigroup
                    -Wtabs
                    -Wunrecognised-warning-flags
                    -Wunrecognised-warning-flags
                    -Wunused-binds
                    -Wunused-do-bind
                    -Wunused-foralls
                    -Wunused-imports
                    -Wunused-matches
                    -Wwrong-do-bind

  exposed-modules:  Data.BitMatrix
                    Data.Either.Custom
                    Data.List.Utility
                    Data.Matrix.NotStupid
                    Data.MutualExclusionSet
                    Numeric.Extended
                    Numeric.Extended.Natural
                    Numeric.Extended.Real
                    Numeric.NonNegativeAverage

  other-modules:    Data.BitMatrix.Internal
                    Data.MutualExclusionSet.Internal
                    Numeric.Extended.Internal

                       
benchmark benchmark-suite

  type:             exitcode-stdio-1.0

  main-is:          Benchmarks.hs
                      
  build-depends:      base               >=4.8
--                    , bv-little
--                    , containers         >=0.5.8
                    , criterion
                    , deepseq
--                    , either
                    , ghc-prim
--                    , hashable
--                    , integer-gmp
--                    , keys
--                    , matrix
--                    , mono-traversable   >=1.0
                    , pcg-utility
--                    , primitive
--                    , QuickCheck
--                    , transformers
--                    , vector

  default-language: Haskell2010

  ghc-options:      -O2
                    -fmax-simplifier-iterations=10
                    -fdicts-cheap
                    -fspec-constr-count=6
                    -threaded

                    -- Sanity check warnings
                    -Wall
                    -Wcompat
                    -Wdodgy-foreign-imports
                    -Wduplicate-exports
                    -Wempty-enumerations
                    -Widentities
                    -Wincomplete-patterns
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wmissing-fields
                    -Wmissing-home-modules
                    -Wmissing-monadfail-instances
                    -Wmissing-monadfail-instances
                    -Wmissing-signatures
                    -Wnoncanonical-monadfail-instances
                    -Wnoncanonical-monad-instances
                    -Wnoncanonical-monoid-instances
                    -Woverflowed-literals
                    -Woverlapping-patterns
                    -Wredundant-constraints
                    -Wsemigroup
                    -Wtabs
                    -Wunrecognised-warning-flags
                    -Wunrecognised-warning-flags
                    -Wunused-binds
                    -Wunused-do-bind
                    -Wunused-foralls
                    -Wunused-imports
                    -Wunused-matches
                    -Wwrong-do-bind

  hs-source-dirs:   bench
                    
  other-modules:    Data.MutualExclusionSet.Bench
                    Numeric.Extended.Natural.Bench

                       
test-suite test-suite

  type:             exitcode-stdio-1.0

  main-is:          TestSuite.hs

  build-depends:      base               >=4.8
                    , bv-little
                    , deepseq
                    , integer-gmp
                    , mono-traversable   >=1.0
                    , pcg-utility
                    , QuickCheck
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck

  default-language: Haskell2010

  ghc-options:      -O2

                    -- Sanity check warnings
                    -Wall
                    -Wcompat
                    -Wdodgy-foreign-imports
                    -Wduplicate-exports
                    -Wempty-enumerations
                    -Widentities
                    -Wincomplete-patterns
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wmissing-fields
                    -Wmissing-home-modules
                    -Wmissing-monadfail-instances
                    -Wmissing-monadfail-instances
                    -Wmissing-signatures
                    -Wnoncanonical-monadfail-instances
                    -Wnoncanonical-monad-instances
                    -Wnoncanonical-monoid-instances
                    -Woverflowed-literals
                    -Woverlapping-patterns
                    -Wredundant-constraints
                    -Wsemigroup
                    -Wtabs
                    -Wunrecognised-warning-flags
                    -Wunrecognised-warning-flags
                    -Wunused-binds
                    -Wunused-do-bind
                    -Wunused-foralls
                    -Wunused-imports
                    -Wunused-matches
                    -Wwrong-do-bind

  hs-source-dirs:   test
                    
  other-modules:    Data.BitMatrix.Test
                    Data.MutualExclusionSet.Test
                    Numeric.Extended.Natural.Test
                    Numeric.Extended.Real.Test
                    Numeric.NonNegativeAverage.Test