cabal-version:      2.2
category:           Data
build-type:         Simple

name:               pcg-utility
version:            0.0.1.0

author:             Ward Wheeler
maintainer:         wheeler@amnh.org
license:            BSD-3-Clause
license-file:       LICENSE

synopsis:           Collection of utility functions and data structures

description:        Defines custom data structures for special use cases,
                    more abstract functions that base provides, and reexported
                    correcting to deficient libraries.


common ghc-settings

  default-language: Haskell2010
  
  ghc-options:      -O2
                    -Wall
                    -Wcompat
                    -Wdodgy-foreign-imports
                    -Wduplicate-exports
                    -Wempty-enumerations
                    -Widentities
                    -Wincomplete-patterns
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wmissing-fields
                    -Wmissing-home-modules
                    -Wmissing-monadfail-instances
                    -Wmissing-monadfail-instances
                    -Wmissing-signatures
                    -Wnoncanonical-monadfail-instances
                    -Wnoncanonical-monad-instances
                    -Wnoncanonical-monoid-instances
                    -Woverflowed-literals
                    -Woverlapping-patterns
                    -Wredundant-constraints
                    -Wsemigroup
                    -Wtabs
                    -Wunrecognised-warning-flags
                    -Wunrecognised-warning-flags
                    -Wunused-binds
                    -Wunused-do-bind
                    -Wunused-foralls
                    -Wunused-imports
                    -Wunused-matches
                    -Wwrong-do-bind


library

  import:           ghc-settings

  build-depends:    base             >=4.8
                  , bv-little
                  , containers       >=0.5.8
                  , deepseq
                  , hashable
                  , integer-gmp
                  , keys
                  , matrix
                  , mono-traversable >=1.0
                  , QuickCheck
                  , transformers
                  , vector

  hs-source-dirs:   src

  exposed-modules:  Data.BitMatrix
                    Data.Either.Custom
                    Data.List.Utility
                    Data.Matrix.NotStupid
                    Data.MutualExclusionSet
                    Data.UnionSet
                    Numeric.Extended
                    Numeric.Extended.Natural
                    Numeric.Extended.Real
                    Numeric.NonNegativeAverage

  other-modules:    Data.BitMatrix.Internal
                    Data.MutualExclusionSet.Internal
                    Numeric.Extended.Internal

                       
benchmark benchmark-suite

  import:           ghc-settings

  type:             exitcode-stdio-1.0

  main-is:          Benchmarks.hs
                      
  build-depends:    base               >=4.8
                  , criterion
                  , deepseq
                  , ghc-prim
                  , pcg-utility

  ghc-options:    -fdicts-cheap
                  -fmax-simplifier-iterations=10
                  -fspec-constr-count=6
                  -threaded

  hs-source-dirs: bench
                    
  other-modules:  Data.MutualExclusionSet.Bench
                  Numeric.Extended.Natural.Bench

                       
test-suite test-suite

  import:           ghc-settings

  type:             exitcode-stdio-1.0

  main-is:          TestSuite.hs

  build-depends:    base               >=4.8
                  , bv-little
                  , deepseq
                  , integer-gmp
                  , mono-traversable   >=1.0
                  , pcg-utility
                  , QuickCheck
                  , tasty
                  , tasty-hunit
                  , tasty-quickcheck
                  , tasty-rerun

  hs-source-dirs: test
                    
  other-modules:  Data.BitMatrix.Test
                  Data.MutualExclusionSet.Test
                  Numeric.Extended.Natural.Test
                  Numeric.Extended.Real.Test
                  Numeric.NonNegativeAverage.Test
                  Data.List.Test

